fixed icons on small screens

--- a/assets/css/components/_cards.scss
+++ b/assets/css/components/_cards.scss
@@ -146,7 +146,8 @@
       margin: 0;
     }
     .card-title {
-      display: block;
+      display: flex;
+      justify-content: space-between;
       line-height: 32px;
       margin-bottom: 8px;
 
